# ai_socsci

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.sh
.github/workflows/: test.yaml
audio/: README.md  musical_diffusion_demo.py
data/ocr/transcriptions/: page_001.txt  page_002.txt  page_003.txt  page_004.txt
docs/: SOURCES.md
ocr/: api.py  pdf2png.py
output/senior_page/: predictions.txt
output/senior_page/intermediary/: scores.csv
output/senior_page/intermediary/raw/: AL_ALBERTVILLE_Albertville High School_2009_18.npy  CA_DALY CITY_Jefferson High School_1980_16.npy  CA_DALY CITY_Jefferson High School_1980_32.npy  ND_DICKINSON_Trinity High School_1984_11.npy  ND_DICKINSON_Trinity High School_1984_72.npy  OR_COQUILLE_Coquille High School_1997_87.npy  TX_GRAPEVINE_Grapevine High School_2004_79.npy
scripts/senior_page/: run_tflite.py
tests/: test_placeholder.py
vertex_model/senior_page/model-8999930383369764864/tf-js/2025-10-28T16_12_55.821623Z/: dict.txt  model.json
