[project]
name = "ai_socsci"
version = "0.1.0"
description = "repo with examples for a seminar on AI for the social sciences"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "librosa>=0.10.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pdf2image>=1.17.0",
    "pymupdf>=1.26.5",
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",
    "umap-learn>=0.5.9.post2",
]

[dependency-groups]
dev = [
    "coverage>=7.10.6",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.0",
]
clap = [
    "laion-clap>=1.1.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
]

[project.scripts]

[tool.setuptools]
packages = []

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
